[package]
name = "frost-pm-test"
version = "0.1.0"
edition = "2024"

[dependencies]
provenance-mark = "^0.21.0"
bc-crypto = "^0.13.0"

frost-ed25519 = "2.1.0"
hex = { version = "^0.4.3", default-features = true }
rand = "^0.9.2"
chrono = "0.4"
anyhow = "1"
dcbor = "^0.25.0"
bincode = { version = "2.0.1", features = ["serde"] }
